--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 }
 
 html,body{
-
 	height: 100%;
 }
 
@@ -28,11 +27,11 @@ html,body{
 }
 
 .header img{
-	margin: 17px;
+	margin: 20px 30px;
 }
 
 .container-banner{
-	padding: 0 2%;
+	padding: 0.2;
 	width: 100%;
 	height: 557px;
 	background-image: url('../images/header_bg.png');
@@ -47,10 +46,10 @@ html,body{
 .form{
 	padding: 20px;
 	width: 400px;
-	height: calc(100% + 30px);
+	height: calc(100% + 20px);
 	float: right;
-	position: relative;
 	top: -15px;
+	position: relative;
 	border: 5px solid rgba(120,120,120,0.7);
 	background-color: white;
 	background-clip: padding-box;
@@ -118,7 +117,12 @@ html,body{
 	border-top: 7px solid #4A5097;
 }
 
+.form input[type=submit]:active{
+	outline: none;
+}
+
 .form input[type=submit]{
+	margin-top: 28px;
 	transition: 0.3s;
 }
 
