--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html,body{
 	padding: 0 2%;
 	width: 100%;
 	height: 70px;
-	background-color: #212343;
+	background-color: black;
 }
 
 .header img{
